@@ -1,1 +1,1 @@
-opj_viewer_xerces-20110711.jar
+opj_viewer_xerces-20110824.jar
